header and part1

--- a/index.html
+++ b/index.html
@@ -18,6 +18,35 @@
             <a href="">Link3</a>
         </div>
     </div>
+
+    <div class="container1">
+        <div class="leftSide1">
+            <div class="thisSite">
+                This website is awesome
+            </div>
+            <div class="textUnder">
+                If you want to show your work (the project) to others, or submit a solution below, you will need to publish your site so that others can access it from the web, rather than just on your local machine.
+            </div>
+            <buttton class="button1">
+                Sign up
+            </buttton>
+        </div>
+        <div class="image1">
+            <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/b54d14c5dcee1c6fac61aee02fca7e9ef7ba1510/foundations/git_basics/project_practicing_git_basics/imgs/07.png" alt="Placeholder">
+        </div>
+    </div>
+
+    <div>
+        Part2
+    </div>
+
+    <div>
+        Part3
+    </div>
+
+    <div>
+        Footer
+    </div>
     
 </body>
 </html>
