--- a/index.html
+++ b/index.html
@@ -36,8 +36,28 @@
         </div>
     </div>
 
-    <div>
-        Part2
+    <div class="container2">
+       <div class="container21">
+            Some random information
+       </div>
+       <div class="container22">
+            <div class="card">
+                <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/b54d14c5dcee1c6fac61aee02fca7e9ef7ba1510/foundations/git_basics/project_practicing_git_basics/imgs/07.png" alt="Placeholder">
+                <div>This is some text under an illustration or image.</div>
+            </div>
+            <div class="card">
+                <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/b54d14c5dcee1c6fac61aee02fca7e9ef7ba1510/foundations/git_basics/project_practicing_git_basics/imgs/07.png" alt="Placeholder">
+                <div>This is some text under an illustration or image.</div>
+            </div>
+            <div class="card">
+                <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/b54d14c5dcee1c6fac61aee02fca7e9ef7ba1510/foundations/git_basics/project_practicing_git_basics/imgs/07.png" alt="Placeholder">
+                <div>This is some text under an illustration or image.</div>
+            </div>
+            <div class="card">
+                <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/b54d14c5dcee1c6fac61aee02fca7e9ef7ba1510/foundations/git_basics/project_practicing_git_basics/imgs/07.png" alt="Placeholder">
+                <div>This is some text under an illustration or image.</div>
+            </div>
+       </div>
     </div>
 
     <div>
